@@ -440,11 +440,11 @@
 </td>
 <td class=cellinside><br /> Calculate Lx/Tx ratios from a given set of CW-OSL curves.<br />
 </td>
-<td class=cellinside>0.5.1
+<td class=cellinside>0.5.2
 </td>
-<td class=cellinside>2015-08-21
+<td class=cellinside>2015-09-09
 </td>
-<td class=cellinside>14:53:14
+<td class=cellinside>12:33:44
 
 </td>
 <td class=cellinside><br /> Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne<br /> (France)<br />  R Luminescence Package Team
