@@ -1,5 +1,5 @@
 % latex table generated in R 3.2.2 by xtable 1.7-4 package
-% Tue Sep  8 21:13:44 2015
+% Wed Sep  9 12:38:11 2015
 \begin{table}[ht]
 \centering
 \begin{tabular}{rlllllll}
@@ -45,7 +45,7 @@
  & $<$br /$>$ Christoph Burow, University of Cologne (Germany)   Based on a$<$br /$>$ rewritten S script of Rex Galbraith, 2010  $<$br /$>$  R Luminescence Package Team \\ 
   20 & calc\_MinDose & Apply the (un-)logged minimum age model (MAM) after Galbraith et al. (1999)$<$br /$>$ to a given De distribution & $<$br /$>$ Function to fit the (un-)logged three or four parameter minimum dose model$<$br /$>$ (MAM-3/4) to De data.$<$br /$>$ & 0.4.1 & 2015-08-21 & 14:53:14
  & $<$br /$>$ Christoph Burow, University of Cologne (Germany)   Based on a$<$br /$>$ rewritten S script of Rex Galbraith, 2010   The bootstrap approach is$<$br /$>$ based on a rewritten MATLAB script of Alastair Cunningham.   Alastair$<$br /$>$ Cunningham is thanked for his help in implementing and cross-checking the$<$br /$>$ code.$<$br /$>$  R Luminescence Package Team \\ 
-  21 & calc\_OSLLxTxRatio & Calculate Lx/Tx ratio for CW-OSL curves & $<$br /$>$ Calculate Lx/Tx ratios from a given set of CW-OSL curves.$<$br /$>$ & 0.5.1 & 2015-08-21 & 14:53:14
+  21 & calc\_OSLLxTxRatio & Calculate Lx/Tx ratio for CW-OSL curves & $<$br /$>$ Calculate Lx/Tx ratios from a given set of CW-OSL curves.$<$br /$>$ & 0.5.2 & 2015-09-09 & 12:33:44
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France)$<$br /$>$  R Luminescence Package Team \\ 
   22 & calc\_SourceDoseRate & Calculation of the source dose rate via the date of measurement & $<$br /$>$ Calculating the dose rate of the irradiation source via the date of$<$br /$>$ measurement based on: source calibration date, source dose rate, dose rate$<$br /$>$ error. The function returns a data.frame that provides the input argument$<$br /$>$ dose\_rate for the function  Second2Gray .$<$br /$>$ & 0.3.0 & 2015-08-31 & 09:06:41
  & $<$br /$>$ Margret C. Fuchs, HZDR, Helmholtz-Institute Freiberg for Resource Technology (Germany),$<$br /$>$  Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne (France)$<$br /$>$  R Luminescence Package Team \\ 
