@@ -84,6 +84,12 @@ Changes in version 0.5.0 (, 2015):
                provided, even the values make no sense the functions
                tries to do the best without breaking.
 
+         • ‘calc_OSLLxTxRatio()’
+
+             • The function produced nonsense if only Lx data are
+               provided as RLum.Data.Curve object; corrected (raised by
+               Andrea Junge).
+
          • ‘calc_SourceDoseRate()’
 
              • Function now returns the original function call as
